[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W504 W503

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -p no:warnings


[tool:isort]
line-width=88
multi-line=3
include_trailing_comma=True
multi_line_output=3
known_third_party=configargparse,corner,gwpy,jinja2,lal,lalsimulation,matplotlib,mock,numpy,pandas,pycondor,seaborn,setuptools,tqdm,bilby,bilby_pipe,h5py,tqdm
known_first_party=
