[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W504 W503

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -p no:warnings


[tool:isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
known_third_party=bilby,gwpy,h5py,numpy,scipy,setuptools
known_first_party=pygwb

[codespell]
ignore-words-list=alog,hist,Nd
